[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/Objects/LaserEnemy/LaserEnemy.gd" type="Script" id=1]
[ext_resource path="res://src/Objects/LaserEnemy/anim_frames.png" type="Texture" id=2]
[ext_resource path="res://src/Objects/LaserEnemy/laser.png" type="Texture" id=3]
[ext_resource path="res://src/Objects/LaserEnemy/laser_shot.wav" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 21.0

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 16, 364 )

[sub_resource type="Animation" id=3]

resource_name = "laser"
length = 1.7
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Laser/Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-005, 680 ), Vector2( 32, 680 ), Vector2( 32, 680 ), Vector2( 1e-005, 680 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Laser/Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false, true, false, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Laser:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.5, 1.7 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "laser_shot"
}, {
"args": [  ],
"method": "fin"
} ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.8, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "charge"
}, {
"args": [  ],
"method": "fire"
}, {
"args": [  ],
"method": "stop"
} ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}

[node name="LaserEnemy" type="Area2D" index="0" groups=[
"Enemy",
]]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 4
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Collision" ]

[node name="Sprite" type="Sprite" parent="." index="0"]

rotation = -1.5708
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
hframes = 2
_sections_unfolded = [ "Animation", "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

pause_mode = 1
rotation = -1.5708
shape = SubResource( 1 )
_sections_unfolded = [ "Pause" ]

[node name="Laser" type="Area2D" parent="." index="2"]

rotation = -1.5708
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
monitoring = false
collision_layer = 0
collision_mask = 6
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="Sprite" type="Sprite" parent="Laser" index="0"]

visible = false
position = Vector2( -3.61999e-006, 386.253 )
scale = Vector2( 1e-005, 680 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Offset", "Transform", "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Laser" index="1"]

position = Vector2( -0.15785, 385.407 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="3"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/laser = SubResource( 3 )
blend_times = [  ]
_sections_unfolded = [ "Pause" ]

[node name="Tween" type="Tween" parent="." index="4"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="Sound" type="AudioStreamPlayer2D" parent="." index="5"]

stream = ExtResource( 4 )
volume_db = -10.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Sound"
area_mask = 1

[connection signal="area_entered" from="Laser" to="." method="_on_Laser_area_entered"]

[connection signal="body_entered" from="Laser" to="." method="_on_Laser_body_entered"]

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]


